--- a/styles.css
+++ b/styles.css
@@ -2,58 +2,95 @@ body {
     background-color: #f5f5f5;
     font-family: Arial, sans-serif;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
 }
 
-/* Corrige la duplicación de propiedades de margen */
-.logo {
-    width: 200px; 
-    /* Usa margin-top para mover la imagen hacia arriba si es necesario */
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 98%;
+    max-width: 1200px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
 }
 
-form {
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-
+.contenedor-login {
+    padding: 20px;
+    text-align: center;
+    width: 50%;
 }
 
-/* Ajusta el tamaño de los campos de entrada */
-.contenC input[type="text"], 
-.contenC input[type="password"] {
-    width: 100%; /* Cambia a 100% para que ocupe todo el ancho disponible */
+.formulario-login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.logo1 {
+    width: 100px;
+    margin-bottom: 20px;
+}
+
+.titulo-login {
+    font-size: 20px;
+    color: #333333;
+    margin-bottom: 15px;
+}
+
+.input-cedula, 
+.input-contrasenia {
+    width: 100%; 
     padding: 10px;
-    margin: 10px 0; /* Mantén el margen vertical consistente */
+    margin: 10px 0; 
     border: 1px solid #cccccc;
     border-radius: 5px;
 }
 
-/* Centra y estiliza el botón de envío */
-.contenC input[type="submit"] {
+.boton-enviar {
     background-color: #4F80FF;
     color: white;
     padding: 10px;
     border-radius: 10px;
     cursor: pointer;
-    width: 50%; /* Ancho del 50% del contenedor */
+    width: 100%;
     font-size: 15px;
-    border: 0.5px solid #cccccc;
-    margin: 10px auto 0; /* Centra el botón horizontalmente y agrega margen superior */
-    display: block; /* Asegura que el botón sea un bloque para el centrado */
+    border: none;
+    margin: 10px 0;
 }
 
-/* Efecto hover para el botón de envío */
-.contenC input[type="submit"]:hover {
+.boton-enviar:hover {
     background-color: #0056b3;
 }
 
-/* Estilo para los mensajes de error */
-.contenC p {
+.mensaje-error {
     color: red;
     margin-top: 20px;
+}
+
+.container-frases {
+    width: 50%;
+    background-color: #e0e7ff; /* Fondo de color diferente para el contenedor de frases */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+    background-color: #606db1;
+}
+
+.logo2 {
+
+    max-width: 400px;
+   
+}
+.contenedor {
+    background-image: url('../img/frases.png');
+/* Centra la imagen dentro del contenedor */
+    width: 100%;
+    height: 100%;
 }
