--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -315,3 +315,73 @@ input:checked + .slider:before {
 }
 
 
+/* control de usuarios */
+
+
+.headerCTRLUSR {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+
+.logoCTRLUSR {
+    display: flex;
+    align-items: center;
+}
+
+.logo-imgCTRLUSR {
+    width: 40px; /* Ajusta el tamaño según necesites */
+    height: auto;
+}
+
+
+.titleCTRLUSR {
+    flex-grow: 1;
+    text-align: center;
+    font-size: 18px;
+    color: #000000;
+}
+
+.user-iconCTRLUSR .icon-imgCTRLUSR {
+    width: 30px;
+    height: 30px;
+}
+
+.navCTRLUSR {
+    display: flex;
+    justify-content: center;
+    border-bottom: 2px solid #eaeaea;
+}
+
+.nav-listCTRLUSR {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.nav-item {
+    margin: 0 20px;
+}
+
+.nav-link {
+    text-decoration: none;
+    color: #000000;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 10px;
+    border-bottom: 2px solid transparent;
+    display: block;
+}
+
+.nav-item.active .nav-link {
+    color: #1d72b8;
+    border-bottom: 2px solid #1d72b8;
+}
+
+.nav-link:hover {
+    color: #1d72b8;
+}
+
+
