--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -385,5 +385,57 @@ input:checked + .slider:before {
 }
 
 
-/*Listados*/
+/*Modificar usuarios*/
+
+.form-container {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    text-align: center;
+}
+
+.form-container img {
+    width: 80px;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.user-info {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+input, select {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.save-button {
+    background-color: #1d72b8;
+    color: white;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.save-button:hover {
+    background-color: #155a96;
+}
+
+.profile-image {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
 
