--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,14 +76,9 @@ body {
 
 /* Trabajo de Lucas*/
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    margin: 30px;
+    display: flex; 
+    height: 100vh;
+    width: 100vw; 
 }
 
 .form-container {
@@ -118,13 +113,13 @@ body {
 .boton-enviar {
     background-color: #4F80FF;
     color: white;
-    padding: 10px;
-    border-radius: 10px;
+    padding: 12px 20px; 
+    border-radius: 8px; 
     cursor: pointer;
-    width: 100%;
-    font-size: 15px;
-    border: none;
-    margin: 10px 0;
+    width: auto;
+    font-size: 16px;
+    border: 1px solid black;
+    margin: 10px 0; 
 }
 
 .boton-enviar:hover {
@@ -144,13 +139,6 @@ body {
     align-items: center;
     padding: 100px;
     background-color: #606db1;
-}
-
-.contenedor {
-    background-image: url('../img/frases.png');
-/* Centra la imagen dentro del contenedor */
-    width: 100%;
-    height: 100%;
 }
 
 
@@ -285,6 +273,8 @@ input:checked + .slider:before {
     width: 100%;
     box-sizing: border-box;
     max-width: 100vw;
+    position: absolute;
+    bottom: 0;
 }
 
 
@@ -403,16 +393,16 @@ input:checked + .slider:before {
 .form-container {
     background-color: white;
     border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    padding: 60px;
+    width: 40%; 
+    box-sizing: border-box; 
     text-align: center;
 }
 
 .form-container img {
-    width: 80px;
+    width: 200px;
     height: auto;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 
 .user-info {
@@ -430,7 +420,7 @@ input, select {
     font-size: 14px;
 }
 
-.save-button {
+.save-button, #registrarUsrBtn{
     background-color: #1d72b8;
     color: white;
     border: none;
@@ -441,7 +431,7 @@ input, select {
     cursor: pointer;
 }
 
-.save-button:hover {
+.save-button:hover, #registrarUsrBtn{
     background-color: #155a96;
 }
 
