--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,4 @@
+/* CSS general */
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -8,13 +9,14 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
-    background-color: #f9f5fc; /* Color de fondo similar al de la imagen */
+    background-color: #f9f5fc;
     border-bottom: 1px solid #ddd;
 }
 
-.logo {
-    display: flex;
-    align-items: center;
+.logo-nexpro {
+    width: 150px; 
+    margin-top: 20px; 
+    margin-bottom: 20px; 
 }
 
 .logo-img {
@@ -22,13 +24,12 @@ body {
     margin-right: 10px;
 }
 
-
 .search-bar {
     display: flex;
     align-items: center;
     flex-grow: 1;
     max-width: 500px;
-    margin: 0 20px;
+    position: relative;
 }
 
 .btn-filters {
@@ -47,12 +48,16 @@ body {
     border-radius: 20px;
     outline: none;
     font-size: 16px;
+    padding-right: 40px; 
 }
 
 .btn-search {
     background: none;
     border: none;
-    margin-left: -35px;
+    position: absolute;
+    right: 10px; 
+    top: 50%;
+    transform: translateY(-50%);
     cursor: pointer;
 }
 
@@ -72,148 +77,6 @@ body {
     border-radius: 50%;
     cursor: pointer;
 }
-
-
-/*login*/
-.container {
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-}
-
-.form-container {
-    padding: 20px;
-    text-align: center;
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.formulario {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%; 
-    max-width: 500px;
-    padding: 10px;
-    box-sizing: border-box;
-}
-
-.titulo-pantalla {
-    font-size: 20px;
-    color: #333;
-    margin-bottom: 15px;
-}
-.input-login {
-    width: 100%;
-    max-width: 400px; 
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box; 
-}
-
-.boton-enviar {
-    background-color: #4F80FF;
-    color: #fff;
-    padding: 12px 20px;
-    border-radius: 8px;
-    border: 1px solid black;
-    cursor: pointer;
-    font-size: 16px;
-    width: auto;
-    margin: 10px 0;
-    transition: background-color 0.3s;
-}
-
-.boton-enviar:hover {
-    background-color: #0056b3;
-}
-
-.mensaje-error {
-    color: red;
-    margin-top: 20px;
-}
-
-.container-frases {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    padding: 100px;
-    background-color: #606db1;
-}
-
-.banner-utu {
-    bottom: 0;
-    right: 0;
-    width: 400px;
-    height: auto;
-}
-
-.texto-pie {
-    bottom: 0;
-    left: 500px;
-    color: #fff;
-    font-size: 16px;
-}
-
-
-.banner-utu,
-.texto-pie {
-    position: absolute;
-    margin: 10px;
-}
-
-/* Media Queries */
-@media (max-width: 768px) {
-    .container {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .form-container {
-        width: 150%;
-        height: auto; 
-        padding: 20px;
-        box-sizing: border-box;
-    }
-
-    .formulario {
-        width: 150%; 
-        max-width: none; 
-    }
-
-    .input-login {
-        width: auto; 
-    }
-
-    .boton-enviar {
-        width: auto;
-    }
-
-    .container-frases,
-    .banner-utu,
-    .texto-pie {
-        display: none; 
-    }
-}
-
-@media (max-width: 480px) {
-    .input-login {
-        width: auto; 
-        font-size: 16px;
-    }
-
-    .boton-enviar {
-        width: auto; 
-        font-size: 16px; 
-    }
-}
-
 
 /* Nav CSS */
 .menu {
@@ -333,8 +196,8 @@ input:checked + .slider:before {
     display: block;
     margin: 20px auto 0;
 }
-/* Footer CSS*/
 
+/* Footer CSS */
 .footer {
     background-color: #1d72b8;
     padding: 10px 20px;
@@ -350,19 +213,15 @@ input:checked + .slider:before {
     bottom: 0;
 }
 
-
 .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     max-width: 1200px;
-    flex-wrap: wrap; /* Permite que los elementos se distribuyan en varias líneas */
-    padding: 10px; /* Ajusta el padding para pantallas pequeñas */
+    flex-wrap: wrap;
+    padding: 10px;
 }
-
- 
-
 
 .footer-text {
     margin: 0;
@@ -376,7 +235,7 @@ input:checked + .slider:before {
 .social-icon img {
     height: 20px;
     width: 20px;
-    filter: invert(100%); /* Blanco sobre fondo azul */
+    filter: invert(100%);
     transition: transform 0.3s;
 }
 
@@ -385,8 +244,219 @@ input:checked + .slider:before {
 }
 
 
-/* control de usuarios */
+@media (max-width: 768px) {
+    .footer {
+        display: none;
+    }
 
+    .header {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+
+    .logo-img {
+        height: 100px; 
+        margin-right: 0;
+    }
+
+    .search-bar {
+        display: flex;
+        align-items: center;
+        margin: 0;
+        max-width: 100%;
+        position: relative; 
+        width: 100%; 
+    }
+
+    .btn-filters {
+        margin-right: 10px;
+    }
+
+    .search-input {
+        width: calc(100% - 50px); 
+        padding-right: 40px;
+    }
+
+    .btn-search {
+        right: 10px; 
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+
+    .profile {
+        display: none; 
+    }
+
+    .menu {
+        display: block; 
+        width: 100%;
+        height: 100%;
+        top: 0;
+        right: 0;
+        padding: 20px;
+    }
+
+    .menu-header h2 {
+        font-size: 24px;
+    }
+
+    .perfil-img {
+        width: 60px;
+        height: 60px;
+    }
+
+    .btn-subir {
+        width: 100%;
+        text-align: center;
+    }
+}
+
+
+
+/*login*/
+.container {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+}
+
+.form-container {
+    padding: 20px;
+    text-align: center;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%; 
+    max-width: 500px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.titulo-pantalla {
+    font-size: 20px;
+    color: #333;
+    margin-bottom: 15px;
+}
+.input-login {
+    width: 100%;
+    max-width: 400px; 
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box; 
+}
+
+.boton-enviar {
+    background-color: #4F80FF;
+    color: #fff;
+    padding: 12px 20px;
+    border-radius: 8px;
+    border: 1px solid black;
+    cursor: pointer;
+    font-size: 16px;
+    width: auto;
+    margin: 10px 0;
+    transition: background-color 0.3s;
+}
+
+.boton-enviar:hover {
+    background-color: #0056b3;
+}
+
+.mensaje-error {
+    color: red;
+    margin-top: 20px;
+}
+
+.container-frases {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    padding: 100px;
+    background-color: #606db1;
+}
+
+.banner-utu {
+    bottom: 0;
+    right: 0;
+    width: 400px;
+    height: auto;
+}
+
+.texto-pie {
+    bottom: 0;
+    left: 525px;
+    color: #fff;
+    font-size: 16px;
+}
+
+
+.banner-utu,
+.texto-pie {
+    position: absolute;
+    margin: 10px;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .form-container {
+        width: 150%;
+        height: auto; 
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    .formulario {
+        width: 150%; 
+        max-width: none; 
+    }
+
+    .input-login {
+        width: auto; 
+    }
+
+    .boton-enviar {
+        width: auto;
+    }
+
+    .container-frases,
+    .banner-utu,
+    .texto-pie {
+        display: none; 
+    }
+}
+
+@media (max-width: 480px) {
+    .input-login {
+        width: auto; 
+        font-size: 16px;
+    }
+
+    .boton-enviar {
+        width: auto; 
+        font-size: 16px; 
+    }
+}
+
+
+/* control de usuarios */
 
 .headerCTRLUSR {
     display: flex;
@@ -410,7 +480,6 @@ input:checked + .slider:before {
 
 .titleCTRLUSR {
     flex-grow: 0.70;
-    text-align: center;
     font-size: 18px;
     color: #000000;
 }
@@ -460,6 +529,56 @@ input:checked + .slider:before {
     color: #1d72b8;
 }
 
+@media (max-width: 768px) {
+    .headerCTRLUSR {
+        flex-direction: column; 
+        align-items: center; 
+        text-align: center; 
+    }
+
+    .logoCTRLUSR {
+        margin-bottom: 10px;
+        justify-content: center; 
+        align-items: center;
+        width: 100%; 
+        display: flex; 
+    }
+
+    .logo-imgCTRLUSR {
+        width: 50%; 
+        height: auto;
+    }
+
+    .titleCTRLUSR {
+        font-size: 16px; 
+        margin: 10px 0; 
+    }
+
+    .user-iconCTRLUSR {
+        margin-top: 10px; 
+    }
+
+    .navCTRLUSR {
+        width: 100%; 
+        border-bottom: none;
+    }
+
+    .nav-listCTRLUSR {
+        flex-direction: row; 
+        justify-content: center; 
+        align-items: center; 
+        padding: 0; 
+    }
+
+    .nav-item {
+        margin: 0 10px; 
+    }
+
+    .nav-item .nav-link {
+        padding: 8px; 
+    }
+}
+
 
 /*Registrar usuarios*/
 .formulario-registro {
@@ -492,19 +611,6 @@ input:checked + .slider:before {
 }
 
 
-@media (max-width: 768px) {
-    .formulario-registro label {
-        font-size: 14px;
-        margin-bottom: 8px; 
-    }
-}
-
-@media (max-width: 480px) {
-    .formulario-registro label {
-        font-size: 12px;
-        margin-bottom: 6px; 
-    }
-}
 
 /*modificar*/
 .form-container-modificar {
@@ -517,24 +623,19 @@ input:checked + .slider:before {
     box-sizing: border-box;
 }
 
-.logo-nexpro {
-    width: 150px; 
-    margin-top: 20px; 
-    margin-bottom: 20px; 
-}
-
-/* Estilo de la imagen de perfil */
 .profile-image {
     width: 100px; 
     height: 100px;
     border-radius: 50%; 
     margin-bottom: 20px; 
+    align-items: center;
 }
 
 .user-info {
     font-size: 16px;
     color: #666;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
+    align-items: center;
 }
 
 .formulario-edicion {
@@ -566,17 +667,91 @@ input:checked + .slider:before {
 }
 
 
+/* Media Querie de modificar y registrar usuarios*/
+@media (max-width: 1024px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .form-container {
+        width: 90%; 
+        height: auto; 
+        padding: 20px;
+    }
+
+    .formulario,
+    .formulario-edicion,
+    .formulario-registro {
+        width: 90%; 
+        max-width: 600px; 
+    }
+
+    .input-login,
+    .input-modificar,
+    .input-registro {
+        width: 100%; 
+        max-width: 100%; 
+    }
+
+    .boton-enviar {
+        width: 100%; 
+    }
+
+    .container-frases,
+    .banner-utu,
+    .texto-pie {
+        display: none; 
+    }
+}
+
 @media (max-width: 768px) {
-    .formulario-edicion label {
-        font-size: 14px; 
-        margin-bottom: 8px;
+    .form-container {
+        width: 90%; 
+        padding: 20px;
+    }
+
+    .formulario,
+    .formulario-edicion,
+    .formulario-registro {
+        width: 100%; 
+        max-width: none; 
+    }
+
+    .input-login,
+    .input-modificar,
+    .input-registro {
+        width: calc(100% - 20px); 
+    }
+
+    .boton-enviar {
+        width: calc(100% - 20px); 
+    }
+
+    .container-frases,
+    .banner-utu,
+    .texto-pie {
+        display: none; 
     }
 }
 
 @media (max-width: 480px) {
-    .formulario-edicion label {
+    .input-login,
+    .input-modificar,
+    .input-registro {
+        font-size: 14px; 
+        padding: 8px;
+    }
+
+    .boton-enviar {
+        font-size: 14px;
+        padding: 10px; 
+    }
+
+    .formulario-edicion label,
+    .formulario-registro label {
         font-size: 12px; 
         margin-bottom: 6px; 
     }
 }
-
