--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,3 @@
-/* CSS general */
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -17,6 +16,20 @@ body {
     width: 150px; 
     margin-top: 20px; 
     margin-bottom: 20px; 
+}
+
+.logo-boton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 20px;
+    margin-right: 12%;
+}
+
+.boton-retroceder {
+    font-size: 15px; /* Tamaño del texto del botón */
+    margin-right: 15px; /* Espacio entre el botón y el logo */
 }
 
 .logo-img {
@@ -78,28 +91,21 @@ body {
     cursor: pointer;
 }
 
-.menu-img {
-    height: auto;
-    width: 60px;
-    border-radius: 50%;
-    cursor: pointer;
-    display: none;
+.boton-retroceder{
 }
 /* Nav CSS */
 .menu {
     width: 300px;
-    height: 100%;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
     position: fixed;
-    top: 0%;
-    transition: right 1s ease;
-   right: -2000px;
+    top: 10%;
+    right: 5%;
+    display: none;
     z-index: 1000;
-    left: auto;
 }
 
 .menu-header {
@@ -110,12 +116,6 @@ body {
 
 .menu-header h2 {
     margin: 0;
-}
-
-.h-conten {
-display: flex;
-justify-content: space-between;
-align-items: center;
 }
 
 .cerrar {
@@ -305,9 +305,12 @@ input:checked + .slider:before {
     }
 
     .menu {
-        right: auto;
-        transition: left 1s ease;
-left: -2000px;
+        display: block; 
+        width: 100%;
+        height: 100%;
+        top: 0;
+        right: 0;
+        padding: 20px;
     }
 
     .menu-header h2 {
@@ -339,6 +342,7 @@ left: -2000px;
     text-align: center;
     flex: 1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -353,11 +357,12 @@ left: -2000px;
     box-sizing: border-box;
 }
 
-.titulo-pantalla {
+.titulo-login {
     font-size: 20px;
     color: #333;
     margin-bottom: 15px;
 }
+
 .input-login {
     width: 100%;
     max-width: 400px; 
@@ -413,7 +418,6 @@ left: -2000px;
     font-size: 16px;
 }
 
-
 .banner-utu,
 .texto-pie {
     position: absolute;
@@ -421,7 +425,39 @@ left: -2000px;
 }
 
 /* Media Queries */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 
+    .form-container {
+        width: 150%;
+        height: auto; 
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    .formulario {
+        width: 150%; 
+        max-width: none; 
+    }
+
+    .input-login {
+        width: auto; 
+    }
+
+    .boton-enviar {
+        width: auto;
+    }
+
+    .container-frases,
+    .banner-utu,
+    .texto-pie {
+        display: none; 
+    }
+}
 
 @media (max-width: 480px) {
     .input-login {
@@ -434,6 +470,7 @@ left: -2000px;
         font-size: 16px; 
     }
 }
+
 
 
 /* control de usuarios */
@@ -510,41 +547,6 @@ left: -2000px;
 }
 
 @media (max-width: 768px) {
-    .menu-img {
-        display: block;
-    }
-    .container {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .form-container {
-        width: 150%;
-        height: auto; 
-        padding: 20px;
-        box-sizing: border-box;
-    }
-
-    .formulario {
-        width: 150%; 
-        max-width: none; 
-    }
-
-    .input-login {
-        width: auto; 
-    }
-
-    .boton-enviar {
-        width: auto;
-    }
-
-    .container-frases,
-    .banner-utu,
-    .texto-pie {
-        display: none; 
-    }
-    
     .headerCTRLUSR {
         flex-direction: column; 
         align-items: center; 
@@ -624,7 +626,6 @@ left: -2000px;
     border-radius: 5px;
     box-sizing: border-box; 
 }
-
 
 
 /*modificar*/
