--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,8 +14,7 @@ body {
 
 .logo-nexpro {
     width: 150px; 
-    margin-top: 20px; 
-    margin-bottom: 20px; 
+
 }
 
 .logo-boton {
@@ -23,13 +22,15 @@ body {
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin-bottom: 20px;
-    margin-right: 12%;
+
 }
 
 .boton-retroceder {
-    font-size: 15px; /* Tamaño del texto del botón */
-    margin-right: 15px; /* Espacio entre el botón y el logo */
+    font-size: 15px;
+    margin-right: 15px; 
+    position: absolute;
+    left: 5%;
+    top: 20%;
 }
 
 .logo-img {
@@ -95,6 +96,7 @@ body {
 /* Nav CSS */
 .menu {
     width: 300px;
+    height: 100%;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
@@ -262,84 +264,24 @@ input:checked + .slider:before {
 .footer-text {
     margin: 0;
 }
-
-.social-icons {
-    display: flex;
-    gap: 10px;
+.social-icons a {
+    margin: 0 10px;
+    color: #ffffff;
+    font-size: 24px; 
 }
 
-.social-icon img {
-    height: 20px;
-    width: 20px;
-    filter: invert(100%);
-    transition: transform 0.3s;
+.social-icons a:hover {
+    color: #1d72b8; 
 }
+
+
+
 
 .social-icon img:hover {
     transform: scale(1.1);
 }
 
-@media (max-width: 768px) {
-    .footer {
-        display: none;
-    }
 
-    .header {
-        flex-direction: column;
-        align-items: center;
-        padding: 10px;
-    }
-
-    .logo-img {
-        height: 100px; 
-        margin-right: 0;
-    }
-
-    .search-bar {
-        display: flex;
-        align-items: center;
-        margin: 0;
-        max-width: 100%;
-        position: relative; 
-        width: 100%; 
-    }
-
-    .btn-filters {
-        margin-right: 10px;
-    }
-
-    .search-input {
-        width: calc(100% - 50px); 
-        padding-right: 40px;
-    }
-
-    .btn-search {
-        right: 10px; 
-        top: 50%;
-        transform: translateY(-50%);
-    }
-
-
-    .profile {
-        display: none; 
-    }
-
-
-
-    .menu-header h2 {
-        font-size: 24px;
-    }
-
-    .perfil-img {
-        width: 60px;
-        height: 60px;
-    }
-
-    .btn-subir {
-        width: 100%;
-        text-align: center;
-    }
-}
 
 
 
@@ -351,13 +293,13 @@ input:checked + .slider:before {
 }
 
 .form-container {
-    padding: 20px;
     text-align: center;
-    flex: 1;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .formulario {
@@ -426,7 +368,6 @@ input:checked + .slider:before {
 
 .texto-pie {
     bottom: 0;
-    left: 525px;
     color: #fff;
     font-size: 16px;
 }
@@ -434,43 +375,11 @@ input:checked + .slider:before {
 .banner-utu,
 .texto-pie {
     position: absolute;
-    margin: 10px;
+
 }
 
 /* Media Queries */
-@media (max-width: 768px) {
-    .container {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
 
-    .form-container {
-        width: 150%;
-        height: auto; 
-        padding: 20px;
-        box-sizing: border-box;
-    }
-
-    .formulario {
-        width: 150%; 
-        max-width: none; 
-    }
-
-    .input-login {
-        width: auto; 
-    }
-
-    .boton-enviar {
-        width: auto;
-    }
-
-    .container-frases,
-    .banner-utu,
-    .texto-pie {
-        display: none; 
-    }
-}
 
 @media (max-width: 480px) {
     .input-login {
@@ -491,14 +400,15 @@ input:checked + .slider:before {
 .headerCTRLUSR {
     display: flex;
     align-items: center;
-    padding: 15px;
+    justify-content: space-between;
+    padding: 10px;
     background-color: #f9f5fc;
-
+    position: relative;
 }
 
-.logoCTRLUSR {
-    display: flex;
-    align-items: center;
+.logoCTRLUSR img{
+    width: 130px;
+    height: auto;
 }
 
 .logo-imgCTRLUSR {
@@ -509,14 +419,16 @@ input:checked + .slider:before {
 
 
 .titleCTRLUSR {
-    flex-grow: 0.70;
-    font-size: 18px;
-    color: #000000;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .user-iconCTRLUSR .icon-imgCTRLUSR {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: auto;
 }
 
 .navCTRLUSR {
@@ -532,8 +444,18 @@ input:checked + .slider:before {
     margin: 0;
     flex-wrap: wrap;
 }
-
-
+.h-conten {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
+    .menu-img {
+        height: auto;
+        width: 40px;
+        border-radius: 50%;
+        cursor: pointer;
+        display: none;
+    }
 .nav-item .nav-link {
     text-decoration: none;
     color: #000000;
@@ -557,93 +479,6 @@ input:checked + .slider:before {
 
 .nav-link:hover {
     color: #1d72b8;
-}
-
-@media (max-width: 768px) {
-
-
-    .menu-img {
-        display: block;
-    }
-    .container {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .form-container {
-        width: 150%;
-        height: auto; 
-        padding: 20px;
-        box-sizing: border-box;
-    }
-
-    .formulario {
-        width: 150%; 
-        max-width: none; 
-    }
-
-    .input-login {
-        width: auto; 
-    }
-
-    .boton-enviar {
-        width: auto;
-    }
-
-    .container-frases,
-    .banner-utu,
-    .texto-pie {
-        display: none; 
-    }
-    
-    .headerCTRLUSR {
-        flex-direction: column; 
-        align-items: center; 
-        text-align: center; 
-    }
-
-    .logoCTRLUSR {
-        margin-bottom: 10px;
-        justify-content: center; 
-        align-items: center;
-        width: 100%; 
-        display: flex; 
-    }
-
-    .logo-imgCTRLUSR {
-        width: 50%; 
-        height: auto;
-    }
-
-    .titleCTRLUSR {
-        font-size: 16px; 
-        margin: 10px 0; 
-    }
-
-    .user-iconCTRLUSR {
-        margin-top: 10px; 
-    }
-
-    .navCTRLUSR {
-        width: 100%; 
-        border-bottom: none;
-    }
-
-    .nav-listCTRLUSR {
-        flex-direction: row; 
-        justify-content: center; 
-        align-items: center; 
-        padding: 0; 
-    }
-
-    .nav-item {
-        margin: 0 10px; 
-    }
-
-    .nav-item .nav-link {
-        padding: 8px; 
-    }
 }
 
 
@@ -693,14 +528,14 @@ input:checked + .slider:before {
     width: 100px; 
     height: 100px;
     border-radius: 50%; 
-    margin-bottom: 20px; 
+
     align-items: center;
 }
 
 .user-info {
     font-size: 16px;
     color: #666;
-    margin-bottom: 20px;
+
     align-items: center;
 }
 
@@ -733,7 +568,7 @@ input:checked + .slider:before {
 }
 
 
-/* Media Querie de modificar y registrar usuarios*/
+/* Media Queries*/
 @media (max-width: 1024px) {
     .container {
         flex-direction: column;
@@ -741,11 +576,7 @@ input:checked + .slider:before {
         justify-content: center;
     }
 
-    .form-container {
-        width: 90%; 
-        height: auto; 
-        padding: 20px;
-    }
+
 
     .formulario,
     .formulario-edicion,
@@ -773,10 +604,177 @@ input:checked + .slider:before {
 }
 
 @media (max-width: 768px) {
-    .form-container {
-        width: 90%; 
-        padding: 20px;
+    
+    .menu-img {
+        display: block;
     }
+
+    .menu-img {
+        display: block;
+    }
+    .container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+  /*  .form-container {
+        width: 150%;
+        height: auto; 
+        padding: 20px;
+        box-sizing: border-box;
+    }
+*/
+    .formulario {
+        width: 150%; 
+        max-width: none; 
+    }
+
+    .input-login {
+        width: auto; 
+    }
+
+
+
+
+    
+    .headerCTRLUSR {
+        display: flex;
+        position: static; 
+        justify-content: center; 
+        flex-direction: column; 
+        align-items: center; 
+
+    }
+
+    .logoCTRLUSR {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 10px;
+
+        width: 100%; 
+        display: flex; 
+    }
+
+    .logo-imgCTRLUSR {
+        width: 40%; 
+        height: auto;
+    }
+ 
+    .titleCTRLUSR {
+        position: static; 
+        text-align: center;
+        font-size: 16px; 
+        margin: 10px 0; 
+        left: 0px;
+        transform: none;
+    }
+
+    .user-iconCTRLUSR {
+        margin-top: 10px; 
+    }
+
+    .navCTRLUSR {
+        width: 100%; 
+        border-bottom: none;
+    }
+
+    .nav-listCTRLUSR {
+        flex-direction: row; 
+        justify-content: center; 
+        align-items: center; 
+        padding: 0; 
+    }
+
+    .nav-item {
+        margin: 0 10px; 
+    }
+
+    .nav-item .nav-link {
+        padding: 8px; 
+    }
+    
+    .container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+
+
+    .formulario {
+        width: 150%; 
+        max-width: none; 
+    }
+
+    .input-login {
+        width: auto; 
+    }
+
+
+
+
+    .footer {
+        display: none;
+    }
+
+    .header {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+
+    .logo-img {
+        height: 100px; 
+        margin-right: 0;
+    }
+
+    .search-bar {
+        display: flex;
+        align-items: center;
+        margin: 0;
+        max-width: 100%;
+        position: relative; 
+        width: 100%; 
+    }
+
+    .btn-filters {
+        margin-right: 10px;
+    }
+
+    .search-input {
+        width: calc(100% - 50px); 
+        padding-right: 40px;
+    }
+
+    .btn-search {
+        right: 10px; 
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+
+    .profile {
+        display: none; 
+    }
+
+
+
+    .menu-header h2 {
+        font-size: 24px;
+    }
+
+    .perfil-img {
+        width: 60px;
+        height: 60px;
+    }
+
+    .btn-subir {
+        width: 100%;
+        text-align: center;
+    }
+
 
     .formulario,
     .formulario-edicion,
@@ -793,13 +791,11 @@ input:checked + .slider:before {
 
     .boton-enviar {
         width: calc(100% - 20px); 
+        font-size: 14px;
+        padding: 10px; 
     }
 
-    .container-frases,
-    .banner-utu,
-    .texto-pie {
-        display: none; 
-    }
+
 }
 
 @media (max-width: 480px) {
@@ -810,10 +806,7 @@ input:checked + .slider:before {
         padding: 8px;
     }
 
-    .boton-enviar {
-        font-size: 14px;
-        padding: 10px; 
-    }
+
 
     .formulario-edicion label,
     .formulario-registro label {
