--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -567,6 +567,36 @@ input:checked + .slider:before {
     box-sizing: border-box; 
 }
 
+/* subir proyecto */
+.formulario-proyecto {
+    padding: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 500px;
+    box-sizing: border-box;
+}
+
+.formulario-proyecto label {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 10px;
+    display: block; 
+}
+
+.input-proyecto {
+    width: 100%; 
+    max-width: 400px; 
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box; 
+}
+
+
 
 /* Media Queries*/
 @media (max-width: 1024px) {
