Link RRSS y cambio de estilo links

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -235,6 +235,11 @@ input:checked + .slider:before {
     margin: 20px auto 0;
 }
 
+.cerrar-sesion a{
+    color: black;
+    text-decoration: none;
+}
+
 /* Footer CSS */
 .footer {
     background-color: #1d72b8;
@@ -567,6 +572,12 @@ input:checked + .slider:before {
     box-sizing: border-box; 
 }
 
+.texto-contrasena{
+    color: black;
+    text-decoration: none;
+}
+
+
 
 /* Media Queries*/
 @media (max-width: 1024px) {
@@ -814,3 +825,4 @@ input:checked + .slider:before {
         margin-bottom: 6px; 
     }
 }
+
