--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -254,7 +254,7 @@ input:checked + .slider:before {
     width: 100%;
     box-sizing: border-box;
     max-width: 100vw;
-    position: absolute;
+    position: fixed;
     bottom: 0;
 }
 
@@ -858,4 +858,118 @@ input:checked + .slider:before {
         font-size: 12px; 
         margin-bottom: 6px; 
     }
+}
+
+
+.proyecto-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.pdf-icon {
+    width: 100px;
+    height: 120px;
+    margin-right: 15px;
+}
+
+.proyecto-info h3 {
+    margin: 0;
+    font-size: 1.2em;
+    color: black;
+}
+
+.proyecto-info p {
+    margin: 0;
+    color: #555;
+}
+
+/* Estilo para el modal (por defecto oculto) */
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4); 
+}
+
+
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 800px;
+    height: 50%;
+    max-width: 500px;
+    text-align: center;
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: row;
+}
+
+
+
+.modal-data {
+    display: flex;
+    flex-direction: column;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.closeI {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.closeI:hover,
+.closeI:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+/* Estilos para los botones */
+#aprobarBtn {
+    background-color: #28a745;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+#rechazarBtn {
+    background-color: #fff;
+    border: 1px solid #dc3545;
+    color: #dc3545;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+#proyectosPendientes {
+    margin-bottom: 100px;
+}
+
+#proyectosAceptados {
+    margin-bottom: 100px;
 }
