--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -618,11 +618,11 @@ input:checked + .slider:before {
     
     .menu-img {
         display: block;
+        position: absolute;
+        left: 20px;
+        top:40px;
     }
 
-    .menu-img {
-        display: block;
-    }
     .container {
         flex-direction: column;
         align-items: center;
