--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,13 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    overflow: auto;
+}
+
+
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 .inicioConten {
