--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -980,3 +980,39 @@ input:checked + .slider:before {
 #proyectosAceptados {
     margin-bottom: 100px;
 }
+
+/*pdf*/
+
+.modal-pdf {
+    display: none;
+    position: fixed;
+    z-index: 10000;  /* Asegúrate de que esté por encima de otros modales */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6); /* Fondo más oscuro */
+}
+
+.modal-pdf-content {
+    background-color: white;
+    margin: 5% auto;
+    padding: 20px;
+    border: 2px solid #888;
+    width: 80%;
+    max-width: 900px;  /* Ajusta el ancho máximo del modal */
+    height: auto;
+}
+
+.close-pdf {
+    color: #333;
+    float: right;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.pdf-frame {
+    width: 100%;
+    height: 600px; /* Ajusta la altura del iframe si lo necesitas */
+    border: none;
+}
