--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,4 @@
+/* body */
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -9,6 +10,9 @@ body {
 body::-webkit-scrollbar {
     display: none;
 }
+
+/*Header*/
+
 
 .inicioConten {
     display: flex;
@@ -37,14 +41,6 @@ body::-webkit-scrollbar {
     justify-content: center;
     width: 100%;
 
-}
-
-.boton-retroceder {
-    font-size: 15px;
-    margin-right: 15px; 
-    position: absolute;
-    left: 5%;
-    top: 20%;
 }
 
 .logo-img {
@@ -94,6 +90,20 @@ body::-webkit-scrollbar {
     color: #ccc;
 }
 
+
+
+/*Extras*/
+
+.boton-retroceder {
+    font-size: 15px;
+    margin-right: 15px; 
+    position: absolute;
+    left: 5%;
+    top: 20%;
+}
+
+/*Nav menu*/
+
 .profile {
     display: flex;
     align-items: center;
@@ -106,8 +116,6 @@ body::-webkit-scrollbar {
     cursor: pointer;
 }
 
-
-/* Nav CSS */
 .menu {
     width: 300px;
     height: 100%;
@@ -288,15 +296,9 @@ input:checked + .slider:before {
     color: #1d72b8; 
 }
 
-
-
-
 .social-icon img:hover {
     transform: scale(1.1);
 }
-
-
-
 
 
 /*login*/
@@ -392,22 +394,6 @@ input:checked + .slider:before {
 
 }
 
-/* Media Queries */
-
-
-@media (max-width: 480px) {
-    .input-login {
-        width: auto; 
-        font-size: 16px;
-    }
-
-    .boton-enviar {
-        width: auto; 
-        font-size: 16px; 
-    }
-}
-
-
 
 /* control de usuarios */
 
@@ -429,7 +415,6 @@ input:checked + .slider:before {
     width: 55%;
   height: auto;
 }
-
 
 
 .titleCTRLUSR {
@@ -504,6 +489,7 @@ input:checked + .slider:before {
     background-color: #f9f5fc;
     position: relative;
 }
+
 /*Registrar usuarios*/
 .formulario-registro {
     padding: 20px;
@@ -620,6 +606,156 @@ input:checked + .slider:before {
 
 
 
+
+.proyecto-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.pdf-icon {
+    width: 100px;
+    height: 120px;
+    margin-right: 15px;
+}
+
+.proyecto-info h3 {
+    margin: 0;
+    font-size: 1.2em;
+    color: black;
+}
+
+.proyecto-info p {
+    margin: 0;
+    color: #555;
+}
+
+/* Estilo para el modal (por defecto oculto) */
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4); 
+}
+
+
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 800px;
+    height: 50%;
+    max-width: 500px;
+    text-align: center;
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: row;
+}
+
+
+
+.modal-data {
+    display: flex;
+    flex-direction: column;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.closeI {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.closeI:hover,
+.closeI:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+/* Estilos para los botones de modal*/
+#aprobarBtn {
+    background-color: #28a745;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+#rechazarBtn {
+    background-color: #fff;
+    border: 1px solid #dc3545;
+    color: #dc3545;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+#proyectosPendientes {
+    margin-bottom: 100px;
+}
+
+#proyectosAceptados {
+    margin-bottom: 100px;
+}
+
+/*pdf*/
+
+.modal-pdf {
+    display: none;
+    position: fixed;
+    z-index: 10000;  
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.modal-pdf-content {
+    background-color: white;
+    margin: 5% auto;
+    padding: 20px;
+    border: 2px solid #888;
+    width: 80%;
+    max-width: 900px;  /* Ajusta el ancho máximo del modal */
+    height: auto;
+}
+
+.close-pdf {
+    color: #333;
+    float: right;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.pdf-frame {
+    width: 100%;
+    height: 600px;
+    border: none;
+}
+
 /* Media Queries*/
 @media (max-width: 1024px) {
     .container {
@@ -670,13 +806,6 @@ input:checked + .slider:before {
         justify-content: center;
     }
 
-  /*  .form-container {
-        width: 150%;
-        height: auto; 
-        padding: 20px;
-        box-sizing: border-box;
-    }
-*/
     .formulario {
         width: 150%; 
         max-width: none; 
@@ -868,151 +997,16 @@ input:checked + .slider:before {
 }
 
 
-.proyecto-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10px;
+
+@media (max-width: 480px) {
+    .input-login {
+        width: auto; 
+        font-size: 16px;
+    }
+
+    .boton-enviar {
+        width: auto; 
+        font-size: 16px; 
+    }
 }
 
-.pdf-icon {
-    width: 100px;
-    height: 120px;
-    margin-right: 15px;
-}
-
-.proyecto-info h3 {
-    margin: 0;
-    font-size: 1.2em;
-    color: black;
-}
-
-.proyecto-info p {
-    margin: 0;
-    color: #555;
-}
-
-/* Estilo para el modal (por defecto oculto) */
-.modal {
-    display: none; 
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4); 
-}
-
-
-.modal-content {
-    background-color: #fff;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 800px;
-    height: 50%;
-    max-width: 500px;
-    text-align: center;
-}
-
-.modal-body {
-    display: flex;
-    flex-direction: row;
-}
-
-
-
-.modal-data {
-    display: flex;
-    flex-direction: column;
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.closeI {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-.closeI:hover,
-.closeI:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-/* Estilos para los botones */
-#aprobarBtn {
-    background-color: #28a745;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-}
-
-#rechazarBtn {
-    background-color: #fff;
-    border: 1px solid #dc3545;
-    color: #dc3545;
-    padding: 10px 20px;
-    cursor: pointer;
-}
-
-#proyectosPendientes {
-    margin-bottom: 100px;
-}
-
-#proyectosAceptados {
-    margin-bottom: 100px;
-}
-
-/*pdf*/
-
-.modal-pdf {
-    display: none;
-    position: fixed;
-    z-index: 10000;  /* Asegúrate de que esté por encima de otros modales */
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* Fondo más oscuro */
-}
-
-.modal-pdf-content {
-    background-color: white;
-    margin: 5% auto;
-    padding: 20px;
-    border: 2px solid #888;
-    width: 80%;
-    max-width: 900px;  /* Ajusta el ancho máximo del modal */
-    height: auto;
-}
-
-.close-pdf {
-    color: #333;
-    float: right;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-.pdf-frame {
-    width: 100%;
-    height: 600px; /* Ajusta la altura del iframe si lo necesitas */
-    border: none;
-}
