--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,9 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
 }
+body.dark{
+    background-color: #232323;
+}
 
 .header {
     display: flex;
@@ -10,6 +13,11 @@ body {
     padding: 10px 20px;
     background-color: #f9f5fc;
     border-bottom: 1px solid #ddd;
+}
+
+.header.dark {
+    background-color: #232323;
+    border-bottom: #232323;
 }
 
 .logo-nexpro {
@@ -65,6 +73,12 @@ body {
     padding-right: 40px; 
 }
 
+.btn-filters.dark {
+    background-color: #232323;
+    border-color: white;
+    color: white;
+}
+
 .btn-search {
     background: none;
     border: none;
@@ -108,6 +122,11 @@ body {
     left: auto;
     transition: right 1s ease, left 1s ease;
     z-index: 1000;
+}
+
+.menu.dark {
+    background-color: #1A1A1A;
+    color: white;
 }
 
 .menu-abierto-pc {
@@ -155,6 +174,10 @@ body {
     cursor: pointer;
 }
 
+.cerrar.dark {
+    color: white;
+}
+
 .perfil-info {
     text-align: center;
     margin-top: 20px;
@@ -175,6 +198,10 @@ body {
     border-radius: 5px;
     cursor: pointer;
     margin-top: 10px;
+}
+
+.btn-subir.dark {
+    background-color: #16436B;
 }
 
 .configuracion {
@@ -233,6 +260,25 @@ input:checked + .slider:before {
     transform: translateX(20px);
 }
 
+/* Estilos para el slider en modo oscuro */
+.dark .slider {
+    background-color: #f2f2f2; /* Fondo claro del slider cuando está desactivado */
+}
+
+.dark .slider:before {
+    background-color: #757575; /* Color gris del círculo cuando está desactivado */
+    box-shadow: 0px 0px 3px #757575;
+}
+
+.dark input:checked + .slider {
+    background-color: #2C2C2C; /* Fondo oscuro cuando está activado */
+}
+
+.dark input:checked + .slider:before {
+    background-color: white; /* Color blanco del círculo cuando está activado */
+}
+
+
 .cerrar-sesion {
     background: none;
     border: none;
@@ -256,6 +302,10 @@ input:checked + .slider:before {
     max-width: 100vw;
     position: absolute;
     bottom: 0;
+}
+
+.footer.dark { 
+    background-color: #16436B;
 }
 
 .footer-content {
